--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "youtube-dl",
     "leecher"
   ],
-  "repository": "https://github.com/Omkar47/AutoLeecher",
+  "repository": "https://github.com/LieStage/AutoLeecher",
   "success_url": "https://telegram.dog/APDBugged",
   "website": "https://github.com/Omkar47/AutoLeecher",
   "env": {
@@ -113,7 +113,7 @@
   "formation": {
     "worker": {
       "quantity": 1,
-      "size": "free"
+      "size": "eco"
     }
   }
 }
